--- a/index.html
+++ b/index.html
@@ -6,40 +6,25 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./styles/style.css">
- <style>
-  img{width: 100%;height:100%;}
- </style>
-</head>
-<body>
-  <main class="main">
-    
-      </div>
-      <div class="cube__section">
-          <div class="cube">
-              <div class="cube__container">
-                  <div class="cube__face cube__face--front">
-                     <img src="https://sergioignatev.github.io/for-efrem/static/media/stock2.4f4647e16939addaf812.jpg" alt="">
-                  </div>
-                  <div class="cube__face cube__face--back">
-                   <img src="https://sergioignatev.github.io/for-efrem/static/media/insta3.32ecfa7905f5ddca893f.jpg" alt="">
-                  </div>
-                  <div class="cube__face cube__face--left">
-                   <img src="https://sergioignatev.github.io/for-efrem/static/media/University.66f88c6d04dc790fd76b.png" alt="">
-                  </div>
-                  <div class="cube__face cube__face--right">
-                   <img src="https://sergioignatev.github.io/for-efrem/static/media/efrem.1b8d2c113d4e49e1768b.jpg" alt="">
-                  </div>
-                  <div class="cube__face cube__face--top">
-                  <img src="https://affokasso.github.io/Logo/%D0%9B%D0%BE%D0%B3%D0%BE-01.jpg" alt="">
-                  </div>
-                  <div class="cube__face cube__face--bottom">
-                     <img src="https://sergioignatev.github.io/for-efrem/static/media/poster2.9509d70e6fae7efb817b.jpg" alt="">
-                  </div>
-              </div>
-          </div>
-      </div>
-  </main>
-</body>
+ 
+  <body >
+ 
+    <h1 style="color: green;">
+      GeeksforGeeks
+  </h1>
+
+  <h3>
+      Make a call-able link using HTML
+  </h3>
+  <a href="sms:+911234567890">
+    +91-123-4567-890
+</a>
+ 
+      Call to GeeksforGeeks support
+  </a>
+
+  </body>
+ 
 <script  src="scripts/main.js"></script>
 
 </html>
